# zanzarah-project

./: .gitignore
api/: .gitignore  Cargo.toml
api/src/: error.rs  main.rs
api/src/core/: book.rs  element.rs  mod.rs  queries.rs  utils.rs  wizform.rs
api/src/graphql/: mod.rs  mutation.rs  protected_mutation.rs  protected_query.rs  query.rs
api/src/services/: mod.rs
api/src/services/auth/: mod.rs  prelude.rs  repo.rs  utils.rs
api/src/services/auth/models/: mod.rs  user.rs
api/src/services/book/: mod.rs  repo.rs
api/src/services/book/models/: book.rs  collection.rs  collection_entry.rs  element.rs  item.rs  location.rs  location_section.rs  location_wizform_entry.rs  magic.rs  mod.rs  wizform.rs
api/src/services/test/: model.rs
desktop-client/: package-lock.json  package.json  test.json  vite.config.ts  wizforms.json
desktop-client/src/: App.tsx  main.tsx
desktop-client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop-client/src-tauri/src/: error.rs  lib.rs  main.rs
desktop-client/src-tauri/src/app/: commands.rs  config.rs  mod.rs  prelude.rs  types.rs
desktop-client/src-tauri/src/parser/: commands.rs  mod.rs  source.rs
desktop-client/src-tauri/src/services/: mod.rs  prelude.rs
desktop-client/src/components/: types.ts
desktop-client/src/components/Book/: BookCreator.tsx  BookRenderer.tsx  current.tsx  types.ts
desktop-client/src/components/Wizform/: CustomFiltersManager.tsx  SpawnPointsManager.tsx  WizformFocused.tsx  WizformMain.tsx  WizformRenderer.tsx  WizformSelector.tsx
desktop-client/src/components/auth/: main.tsx
desktop-client/src/components/content/: store.ts  (+3 more)
desktop-client/src/contexts/: AppState.tsx  WizformFilter.tsx
desktop-client/src/stores/: Wisform.ts
mobile-client/: index.html  pnpm-lock.yaml  vite.config.ts
mobile-client/src-tauri/src/: error.rs
mobile-client/src/components/: WizformFocused.tsx
mobile-client/src/contexts/: WizformFilter.tsx
mobile-client/src/stores/: Wizform.ts
web-client/: .gitignore  codegen.ts  package-lock.json  package.json  schema.graphql  tsconfig.json
web-client-react-router/: codegen.ts  index.html  package-lock.json  package.json  schema.graphql  tsconfig.json
web-client-react-router/src/: App.tsx  home.tsx  main.tsx  router.tsx
web-client-react-router/src/contexts/: activeBook.tsx  auth.tsx  wizformsList.tsx
web-client-react-router/src/graphql/: fragment-masking.ts  gql.ts  graphql.ts
web-client-react-router/src/queries/: books.ts  common.ts  elements.ts
web-client-react-router/src/styles/: main.module.css
web-client/app/: routeTree.gen.ts  router.tsx
web-client/app/graphql/: execute.ts  graphql.ts
web-client/app/routes/: __root.tsx  books.tsx  index.tsx  wizforms.$bookId.tsx  wizforms.tsx
web-client/app/stores/: common.ts  map.ts  wizforms.ts
web-client/app/styles/: main.module.css
web-client/app/utils/: env.ts
web-client/src/contexts/: activeBook.tsx  wizformsList.tsx
web-client/src/graphql/: fragment-masking.ts  gql.ts  graphql.ts
web-client/src/stores/: common.ts  currentBook.ts  currentCollection.ts
zz-bof/: package-lock.json  package.json  pnpm-lock.yaml
zz-bof/src/: App.tsx  types.ts
zz-bof/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
zz-bof/src-tauri/icons/: icon.icns
zz-bof/src-tauri/src/: lib.rs  main.rs
zz-bof/src-tauri/src/app/: commands.rs  mod.rs  prelude.rs  utils.rs
zz-bof/src-tauri/src/book/: commands.rs  mod.rs  source.rs  utils.rs
zz-bof/src-tauri/src/services/zz_api/: mod.rs  prelude.rs
zz-bof/src-tauri/src/services/zz_api/schema/: element.rs  prelude.rs  wizform.rs
zz-bof/src-tauri/src/services/zz_api/service/: mod.rs  payloads.rs
zz-bof/src/components/: BooksSelector.tsx  WizformFilterMenu.tsx  WizformFocused.tsx  WizformMagics.tsx  WizformMain.tsx  WizformSelector.tsx  types.ts  types.tsx
zz-bof/src/contexts/: AppState.tsx  WizformFilter.tsx
zz-bof/src/stores/: Book.ts  Wizform.ts
zz-data/: Cargo.toml
zz-data/src/: lib.rs
zz-data/src/book/: base.rs  mod.rs
zz-data/src/core/: magic.rs  mod.rs  text.rs  wizform.rs
zz-parser/: package-lock.json  package.json  test.txt  test2.txt  zz_cfg.json
zz-parser/src/: App.tsx
zz-parser/src-tauri/: .gitignore  Cargo.toml  _fb0x01.fbs  _fb0x02.fbs  build.rs  tauri.conf.json
zz-parser/src-tauri/src/: error.rs  lib.rs  main.rs
zz-parser/src-tauri/src/app/: commands.rs  mod.rs  types.rs  utils.rs
zz-parser/src-tauri/src/graphql/schemas/: zz-webapi.graphql
zz-parser/src-tauri/src/parser/: commands.rs  mod.rs  source.rs  types.rs  utils.rs
zz-parser/src-tauri/src/parser/plugins/: types.rs
zz-parser/src-tauri/src/services/parser/: prelude.rs  utils.rs
zz-parser/src-tauri/src/services/parser/plugins/: desc.rs  prelude.rs
zz-parser/src-tauri/src/services/zanzarah_api/schema/: book.rs  mod.rs  prelude.rs  user.rs  wizform.rs
zz-parser/src-tauri/src/services/zanzarah_api/service/: mod.rs  prelude.rs
zz-parser/src/components/: BookRenderer.tsx  BooksFacade.tsx  ElementsRenderer.tsx  WizformRenderer.tsx  types.ts
zz-parser/src/contexts/: SpawnPoints.tsx  WizformFilter.tsx
zz-parser/src/stores/: Book.ts  Wisform.ts
zz-test/: .gitignore  Cargo.toml
zz-webapi/: .env  .gitignore  Cargo.toml
zz-webapi/migrations/: 20240904222355_init.sql  20241011193112_init.sql  20241012071306_additional_stuff.sql  20241018095650_wizform_cleared_name.sql  20241018144536_cleared_name_fill2.sql  20250117131734_test_graphql.sql
zz-webapi/src/: error.rs  main.rs
zz-webapi/src/book/: mod.rs
zz-webapi/src/core/: book.rs  element.rs  mod.rs  queries.rs  utils.rs  wizform.rs
zz-webapi/src/drive/: mod.rs
zz-webapi/src/graphql/: mod.rs  mutation.rs  query.rs
zz-webapi/src/services/: mod.rs
zz-webapi/src/services/auth/: mod.rs  prelude.rs
zz-webapi/src/services/auth/models/: mod.rs  user.rs
zz-webapi/src/services/book/: repo.rs  service.rs
zz-webapi/src/services/book/models/: element.rs  magic.rs  mod.rs  wizform.rs
zz-webapi/src/services/wizform/: service.rs
zz-webapi/src/services/wizform/models/: element.rs  mod.rs  wizform.rs
(+210 files in other folders)
