[package]
name = "zz-webapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tokio = "1.28.2"
sqlx = {version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"]}
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
shuttle-shared-db = { version = "0.53.0", features = ["postgres", "sqlx"] }
strum = { version = "0.26.3", features = ["derive"] }
async-graphql = {version = "7.0.13", features = ["uuid", "chrono"]}
async-graphql-axum = "7.0.13"
async-stream = "0.3.6"
futures-channel = "0.3.31"
futures-core = "0.3.31"
futures-util = "0.3.31"
once_cell = "1.20.2"
slab = "0.4.9"
tokio-stream = "0.1.17"
sea-orm = { version = "1.1.4", features = ["sqlx-postgres"] }
serde_json = { version = "1.0.135", features = ["raw_value"] }
dotenv = "0.15.0"
zz-data = "0.2.6"
tower-http = { version = "0.6.2", features = ["cors"] }
thiserror = "2.0.12"
itertools = "0.14.0"
mailjet_api_wrapper = "0.4.0"
reqwest = { version = "0.12.15", features = ["json"] }
mail-send = "0.5.0"
chrono = "0.4.41"
totp-rs = "5.7.0"
