[package]
name = "zz-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.47.0"
shuttle-runtime = { version = "0.47.0" }
shuttle-shared-db = {version = "0.47.0", features = ["sqlx", "postgres"]}
sqlx = {version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"]}
tokio = "1.28.2"
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
zz-data = "0.1.15"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
