[package]
name = "zz-webapi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
shuttle-axum = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.28.2"
sqlx = {version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"]}
serde = { version = "1.0.209", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4"] }
zz-data = "0.2.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
shuttle-shared-db = { version = "0.48.0", features = ["postgres", "sqlx"] }
strum = { version = "0.26.3", features = ["derive"] }
