[package]
name = "zanzarah-book-of-faeries"
version = "0.1.0"
description = "Book of faeries for Zanzarah mods"
authors = ["pegn0ly"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zz_bof_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = ['protocol-asset'] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1", features = ["raw_value"] }
zz-data = "0.2.3"
strum = { version = "0.26.3", features = ["derive"] }
reqwest = { version = "0.12.7", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.40.0", features = ["macros"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio", "json", "uuid"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
