[package]
name = "zanzarah-book-of-faeries"
version = "0.1.0"
description = "Book of faeries for Zanzarah mods"
authors = ["pegn0ly"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zz_bof_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }
cynic-codegen = { version = "3.10.0"}

[dependencies]
tauri = { version = "2.4.1", features = ['protocol-asset'] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.140", features = ["raw_value"] }
strum = { version = "0.27.1", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.44.1", features = ["macros"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio", "json", "uuid"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
cynic = { version = "3.10.0", features = ["reqwest", "http-reqwest", "serde_json"] }
thiserror = "2.0.12"
