[package]
name = "zz-parser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zz_parser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
zz-data = {path = "../../zz-data"}
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binary-reader = "0.4.5"
hex = "0.4.3"
byteorder = "1.5.0"
bincode = "1.3.3"
utf16string = "0.2.0"
encoding_rs = "0.8.34"

