[package]
name = "zz-parser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zz_parser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
zz-data = "0.1.15"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
binary-reader = "0.4.5"
encoding_rs = "0.8.34"
uuid = { version = "1.10.0", features = ["v4"] }
tokio = { version = "1.40.0", features = ["macros"] }
reqwest = "0.12.7"
strum = { version = "0.26.3", features = ["derive"] }
tauri-plugin-dialog = "2.0.0-rc.5"

