[package]
name = "zz-parser"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "zz_parser_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.1.1", features = [] }
cynic-codegen = { version = "3.10.0"}

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = {version = "1.0.140", features = ["raw_value"] }
binary-reader = "0.4.5"
encoding_rs = "0.8.35"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tokio = { version = "1.44.1", features = ["macros"] }
reqwest = {version = "0.12.15", features = ["multipart"] }
strum = { version = "0.27.1", features = ["derive"] }
tauri-plugin-dialog = "2.2.1"
bmp = "0.5.0"
base64 = "0.22.1"
chrono = "0.4.40"
log4rs = "1.3.0"
log = "0.4.27"
human_regex = "0.3.0"
cynic = { version = "3.10.0", features = ["reqwest", "http-reqwest", "serde_json"] }
thiserror = "2.0.12"
itertools = "0.14.0"
